--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,14 +1,14 @@
 doctype html
 html
   head
-    title Famous Amos' Pet Emporium
+    title CatCraigslist
 
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
 
     nav.navbar.navbar-expand-sm.navbar-light.bg-light
-      a.navbar-brand(href='/') Famous Amos' Pet Emporium
+      a.navbar-brand(href='/') CatCraigslist
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse
@@ -24,7 +24,7 @@ html
         .container
           .row.py-3
             .col-md-9
-              p.text-white Famous Amos' Pet Emporium &#xA9; 2017
+              p.text-white CatCraigslist &#xA9; 2017
 
 
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
