--- a/views/pets-edit.pug
+++ b/views/pets-edit.pug
@@ -4,7 +4,7 @@ block content
     
     .row.justify-content-center
         .col-sm-6
-            legend New Pet
+            legend New Cat
             form(action="/pets/0?_method=PUT", method="POST")
                 .form-group
                     label Name
