--- a/views/pets-new.pug
+++ b/views/pets-new.pug
@@ -4,7 +4,7 @@ block content
     
     .row.justify-content-center
         .col-sm-6
-            legend New Pet
+            legend New Cat
             form(action="/pets", method="POST")
                 .form-group
                     label Name
