--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
       #navbarSupportedContent.collapse.navbar-collapse
         ul.navbar-nav
           li.nav-item
-            a.nav-link(href='/pets/new') New Cat
+            a.nav-link(href='/cats/new') New Cat
 
     .container
       block content
