--- a/views/cats-new.pug
+++ b/views/cats-new.pug
@@ -5,7 +5,7 @@ block content
     .row.justify-content-center
         .col-sm-6
             legend New Cat
-            form(action="/pets", method="POST")
+            form(action="/cats", method="POST")
                 .form-group
                     label Name
                     input.form-control(name="name")
