--- a/views/cats-show.pug
+++ b/views/cats-show.pug
@@ -3,20 +3,20 @@ extends layout
 block content
     .row
         .col-sm-4
-            img(src=pet.picUrlSq).img-fluid
+            img(src=cat.picUrlSq).img-fluid
         .col-sm-8
-            h1=pet.name
-            p=pet.species
+            h1=cat.name
+            p=cat.species
             .text-right
-              a.btn.btn-primary(href="/pets/" + pet.id + "/purchase" role='button') Buy #{pet.name} Now!
-            p Born on #{pet.birthday}
-            p=pet.description
+              a.btn.btn-primary(href="/cats/" + cat.id + "/purchase" role='button') Buy #{cat.name} Now!
+            p Born on #{cat.birthday}
+            p=cat.description
             .text-right
-                a(href="/pets/" + pet.id + "/edit").btn-link Edit
+                a(href="/cats/" + cat.id + "/edit").btn-link Edit
             
             hr
-            small.text-muted Comments for #{pet.name}
-            form(action="/pets/" + pet.id + "/comments" method="POST")
+            small.text-muted Comments for #{cat.name}
+            form(action="/cats/" + cat.id + "/comments" method="POST")
                 .form-group
                     textarea.form-control(name="body")
                 .text-right
@@ -24,6 +24,6 @@ block content
             each c in comments
                 p=c.body
                 small.text-right
-                    form(action="/pets/" + pet.id + "/comments/0?_method=DELETE" method="POST")
+                    form(action="/cats/" + cat.id + "/comments/0?_method=DELETE" method="POST")
                         .text-right
                             button(type="submit").text-danger Remove
