cruddy but working

--- a/views/cats-show.pug
+++ b/views/cats-show.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     .row
         .col-sm-4
-            img(src=cat.picUrlSq).img-fluid
+            img(src=cat.picUrl).img-fluid
         .col-sm-8
             h1=cat.name
             p=cat.species
