clean up overall look and add 'payments'

--- a/views/cats-new.pug
+++ b/views/cats-new.pug
@@ -16,15 +16,6 @@ block content
                     label Rectangular Image URL
                     input.form-control(name="picUrl") 
                 .form-group
-                    label Square Image URL
-                    input.form-control(name="picUrlSq")   
-                .form-group
-                    label Birthday
-                    input.form-control(name="birthday")    
-                .form-group
-                    label Favorite Food
-                    input.form-control(name="favoriteFood") 
-                .form-group
                     label Description
-                    textarea.form-control(name="description")   
+                    textarea.form-control(name="bio")   
                 button(type="submit").btn.btn-primary Save
