--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,11 +20,11 @@ html
       block content
 
     footer.mt-5
-      .container-fluid.bg-primary.py-3
+      .container-fluid.bg-danger.py-3
         .container
           .row.py-3
             .col-md-9
-              p.text-white CatCraigslist &#xA9; 2017
+              p.text-white CatCraigslist &#xA9; 2018
 
 
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
