--- a/views/cats-index.pug
+++ b/views/cats-index.pug
@@ -12,4 +12,9 @@ block content
             p.card-text= cat.description
             .text-right
               a.card-link(href="/cats/" + cat.id) View cat named #{cat.name}
+  .row.justify-content-center
+    form(action='/' method="GET")
+      div.btn-group(role='group')
+        - for (var x = 1; x < pages + 1; x++)
+            input.pageBtn(type="submit" name="page" value=x)
 
